objects/AIA_Plan__c.object
<CustomObject>
    <fields>
        <fullName>PriorCarrierDedCred__c</fullName>
        <label>PriorCarrierDedCred</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>CareFirst Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Last_Updated_String_Format__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Last Updated String Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Last_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DENTAL</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>VISION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>HCR</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Exit</fullName>
                </value>
                <value>
                    <fullName>UM</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DHMO</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>BlueDental Plus</fullName>
                </value>
                <value>
                    <fullName>BlueDental Basic (Non DHMO)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>US258
This field holds values from the PCS specific field : Product Family Description</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueChoice Advantage CDH Integrated</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Advantage CDH Non-Integrated</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Advantage</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO Referral Integrated Ded &gt; 1K</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Referral Non-Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO Open Access</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO Open Access HDHP Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO Open Access HDHP Non Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BluePreferred HDHP Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BluePreferred HDHP Non Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BluePreferred PPO</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Opt Out Open Access</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Opt Out Plus Open Access HDHP Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Opt Out Plus Open Access HDHP Non Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Opt Out Plus Open Access</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO Referral Non-Integrated Ded &gt;1K</fullName>
                </value>
                <value>
                    <fullName>"BPH	BluePreferred HDHP Integrated Deductible"</fullName>
                </value>
                <value>
                    <fullName>Catastrophic</fullName>
                </value>
                <value>
                    <fullName>Capital Care Advantage</fullName>
                </value>
                <value>
                    <fullName>Capital Care HMO</fullName>
                </value>
                <value>
                    <fullName>Dental Test</fullName>
                </value>
                <value>
                    <fullName>VAES HMO</fullName>
                </value>
                <value>
                    <fullName>VAES Comprehensive</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue Triple Option - Integrated ≥ 1K (HB1)</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue Triple Option - Integrated  &lt; 1K(HB1)</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0 /Plus Dual Option (Bcoop) Integrated ≥1K (HB2)</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0/Plus Dual Option (Bcoop) Nonintegrated ≥1K  (HB2)</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0/Plus Dual Option (Bcoop) Integrated &lt;1K  (HB2)</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0/Plus Dual Option (Bcoop) Nonintegrated &lt;1K  (HB2)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrscrbdOrlContrcptvAndDevc__c</fullName>
        <label>PrscrbdOrlContrcptvAndDevc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Woman’s Preventive Services (standard with Preventive $0 copay unless religious exclusion)</fullName>
                </value>
                <value>
                    <fullName>Woman’s Preventive Services Exempt – No Benefits</fullName>
                </value>
                <value>
                    <fullName>Woman’s Preventive Services Accommodated – Full Exemption</fullName>
                </value>
                <value>
                    <fullName>Woman’s Preventive Services Accommodated – Emergency Contraception</fullName>
                </value>
                <value>
                    <fullName>Mandated Benefits (standard for Grandfathered unless Preventive / WPS chosen) Oral, Transdermal, Non-surgical Injectables, Cervical Cap and Diaphargms.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QA_Completed_by__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Completed by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralSpecDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Spec Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReferralSpec__c</fullName>
        <description>b-03443</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ReferralSpec</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetDispnsMaintDaysSupp__c</fullName>
        <label>RetDispnsMaintDaysSupp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RetDispnsNMaintDaysSupp__c</fullName>
        <label>RetDispnsNMaintDaysSupp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RetMailDispnsMaintLimitation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RetMailDispnsMaintLimitation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RetMailDispnsMaint__c</fullName>
        <label>RetMailDispnsMaint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to 90 day supply 2 copays (standard)</fullName>
                </value>
                <value>
                    <fullName>Voluntary Maintenance Choice</fullName>
                </value>
                <value>
                    <fullName>Voluntary Maintenance Choice (custom)</fullName>
                </value>
                <value>
                    <fullName>Mandatory Maintenance Choice</fullName>
                </value>
                <value>
                    <fullName>Mandatory Maintenance Choice (custom)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RxFundamentalApply__c</fullName>
        <label>RxFundamentalApply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RxFundamentalDedCopayRule__c</fullName>
        <label>RxFundamentalDedCopayRule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waive Ded/Waive Copay (Standard)</fullName>
                </value>
                <value>
                    <fullName>Waive Ded/Apply Copay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skeleton_Plan__c</fullName>
        <formula>IF( Has_Benefit_Summary__c = true, false, true)</formula>
        <label>Skeleton Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>The date the product is not available to be selected for quoting</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Three_Month_Deductible_Carryover__c</fullName>
        <label>Three Month Deductible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierCount__c</fullName>
        <label>TierCount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X01_Program__c</fullName>
        <description>Vision attribute Release 2A</description>
        <label>01 Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 - Core BlueVision</fullName>
                </value>
                <value>
                    <fullName>31 - Core BlueVision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X05OptionsString__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>05OptionsString</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X05Options__c</fullName>
        <label>05Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>07-Includes Tint and Excludes Referral Exam</fullName>
                </value>
                <value>
                    <fullName>08–Group w/ Medical Option(s)</fullName>
                </value>
                <value>
                    <fullName>09–Freestanding Vision Group</fullName>
                </value>
                <value>
                    <fullName>Other (nonstandard)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X06RenewalPeriodString__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>06RenewalPeriodString</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X06RenewalPeriod__c</fullName>
        <label>06RenewalPeriod</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>07–12 Months</fullName>
                </value>
                <value>
                    <fullName>08–24 Months</fullName>
                </value>
                <value>
                    <fullName>11–Exam &amp; Lens 12 Months; Frames 24 Months</fullName>
                </value>
                <value>
                    <fullName>Other (nonstandard)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X07BenefitRenewsString__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>07BenefitRenewsString</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X07BenefitRenews__c</fullName>
        <label>07BenefitRenews</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>07–Calendar Year</fullName>
                </value>
                <value>
                    <fullName>08–Contract Year</fullName>
                </value>
                <value>
                    <fullName>09–Date of Service</fullName>
                </value>
                <value>
                    <fullName>Other (nonstandard)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X08RenewalType__c</fullName>
        <label>08RenewalType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-Contract Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isDrugCount__c</fullName>
        <label>isDrugCount</label>
        <summaryFilterItems>
            <field>AIA_Related_Plans__c.Type__c</field>
            <operation>equals</operation>
            <value>Drug</value>
        </summaryFilterItems>
        <summaryForeignKey>AIA_Related_Plans__c.Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <description>AIA Object - Object used to store plans send from PCS</description>
    <label>Plan</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>SFDC Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All3</fullName>
        <columns>NAME</columns>
        <columns>Full_Plan_Name__c</columns>
        <columns>PlanType__c</columns>
        <columns>Product_Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Plan_Id__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Skeleton_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <label>All Medical Plans</label>
    </listViews>
    <listViews>
        <fullName>Allnew</fullName>
        <columns>NAME</columns>
        <columns>Full_Plan_Name__c</columns>
        <columns>PlanType__c</columns>
        <columns>Product_Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Plan_Id__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Skeleton_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Skeleton_Products</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Option__c</columns>
        <columns>Jurisdiction__c</columns>
        <columns>PlanType__c</columns>
        <columns>CDH__c</columns>
        <columns>CDH_Fund_Type__c</columns>
        <columns>CDH_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>Skeleton Products</label>
    </listViews>
</CustomObject>